--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="./assets/js/isLoggedIn.js"></script>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -41,17 +42,7 @@
         <div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-md-6 offset-md-3 col-xs-12">
-                        <div class="alert alert-success alert-dismissible fade show m-2 p-2 "  id="msgBox">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="alert alert-danger alert-dismissible fade show m-2 p-2 "  id="errBox">
-                                Email or Password is wrong
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
+                    <div id="msg-hold"></div>
                     <div class="jumbotron reg-box mt-2">
                             <p class="top-text1 text-center mb-3">Login Form</p>
                         <form class="mt-5">
