--- a/user/deposit.html
+++ b/user/deposit.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="../assets/js/authCheck.js"></script>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
@@ -29,7 +30,7 @@
                                 <a href="/user/history.html" class="nav-link text-success mr-3"><i class="fa fa-history" aria-hidden="true"></i> History</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/user/profile.html" class="nav-link text-success mr-3"><i class="fas fa-user-edit"></i> Edit Profile</a>
+                                <a href="/user/profile.html" class="nav-link text-success mr-3"><i class="fas fa-user-edit"></i> Update Profile</a>
                             </li>
                             <li class="nav-item">
                                 <a href="/user/profile.html" class="nav-link text-success btn btn-outline-success mr-3 mb-1"><span class="pl-3 pr-3" id="name-holder"><i class="fas fa-user"></i> username</span></a>
@@ -59,9 +60,9 @@
                                 <div></div>
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <label for="fullName" class="sr-only">Depositor</label>
+                                        <label for="fullName" class="sr-only">Customer Name</label>
                                         <div class="input-group-prepend">
-                                            <div class="input-group-text">Depositor</div>
+                                            <div class="input-group-text">Customer Name</div>
                                         </div>
                                         <input type="text" class="form-control" id="fullName" readonly>
                                     </div>
