--- a/public/register.html
+++ b/public/register.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./assets/js/isLoggedIn.js"></script>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <title>Deca Bank | Register</title>
@@ -166,9 +166,9 @@
                 </div>
                 
               </footer>
-        <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
-        <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="./assets/js/jquery.min.js"></script>
+        <script src="./assets/js/popper.min.js"></script>
+        <script src="./assets/js/bootstrap.js"></script>
         <script src="./assets/js/register.js"></script>
     </body>
 </html>
