--- a/public/user/withdraw.html
+++ b/public/user/withdraw.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="../assets/js/authCheck.js"></script>
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/all.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/all.min.css">
     <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <title>Deca Bank | Withdraw </title>
 </head>
@@ -124,10 +125,11 @@
                 </div>
             </div>
         </footer>
-        <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+        
+        <script src="../assets/js/jquery.min.js"></script>
         <script src="../assets/js/withdraw.js"></script>
         <script src="../assets/js/logout.js"></script>
-        <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
-        <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="../assets/js/popper.min.js"></script>
+        <script src="../assets/js/bootstrap.js"></script>
     </body>
 </html>
